@@ -58,9 +58,9 @@ public class LuceneSegmentRecordReader extends RecordReader<Text, NullWritable> 
 
     IndexSearcher searcher = new IndexSearcher(segmentReader);
     String idField = lucene2SeqConfiguration.getIdField();
-    LuceneIndexHelper.fieldShouldExistInIndex(searcher, idField);
+    LuceneIndexHelper.fieldShouldExistInIndex(segmentReader, idField);
     for (String field : lucene2SeqConfiguration.getFields()) {
-        LuceneIndexHelper.fieldShouldExistInIndex(searcher, field);
+        LuceneIndexHelper.fieldShouldExistInIndex(segmentReader, field);
     }
 
     Weight weight = lucene2SeqConfiguration.getQuery().createWeight(searcher);
