@@ -2,6 +2,8 @@ Mahout Change Log
 
 Release 1.0 - unreleased
 
+  MAHOUT-1521: lucene2seq - Error trying to load data from stored field (when non-indexed) (Terry Blankers via frankscholten)
+
   MAHOUT-1310: Mahout support windows (Sergey Svinarchuk via ssc)
 
   MAHOUT-1520: Fix links in Mahout website documentation (Saleem Ansari via smarthi)
